Added navbar , started localization

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -8,3 +8,4 @@ logout.text = You have been logged out.
 addNewUser.text = Add new user
 name.text = firstName
 lastName.text =  lastName
+title.work = Title
