--- a/src/main/resources/messages_ua.properties
+++ b/src/main/resources/messages_ua.properties
@@ -7,3 +7,4 @@ logout.text = \u0412\u0438 \u0432\u0438\u0439\u0448\u043B \u0437 \u0430\u043A\u0
 addNewUser.text = \u0414\u043E\u0431\u0430\u0432\u0438\u0442\u0438 \u043A\u043E\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0430
 name.text = \u0406\u043C'\u044F
 lastName.text = \u041F\u0440\u0456\u0437\u0432\u0438\u0449\u0435
+title.work = ?????
