--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -9,3 +9,18 @@ addNewUser.text = Add new user
 name.text = firstName
 lastName.text =  lastName
 title.work = Title
+annotation.work = Annotation
+send.date.work = Send date
+sort.ascending = Ascending
+sort.descending = Descending
+date.review = Publication date
+text.review = Text
+rate.review = Rate
+user.review = User
+file.work = File
+upload.button = Upload
+published.works.link = Published works
+user.works.link = Your works
+new.works.link = New works
+signOut.button = Sign out
+home.link = Home
