--- a/src/main/resources/messages_ua.properties
+++ b/src/main/resources/messages_ua.properties
@@ -24,3 +24,4 @@ new.works.link = \u041D\u043E\u0432\u0456 \u043F\u0440\u0430\u0446\u0456
 signOut.button = \u0412\u0438\u0439\u0442\u0438
 home.link = \u0413\u043E\u043B\u043E\u0432\u043D\u0430
 update.button = \u041E\u043D\u043E\u0432\u0438\u0442\u0438
+delete.button = \u0412\u0438\u0434\u0430\u043B\u0438\u0442\u0438
