Publish and depublish functions

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -26,3 +26,5 @@ signOut.button = Sign out
 home.link = Home
 update.button = Update
 delete.button = Delete
+publish.button = Publish
+depublish.button = Depublish
