Add some buttons

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -29,3 +29,6 @@ delete.button = Delete
 publish.button = Publish
 depublish.button = Depublish
 find.button = Find
+create.review.button = Create review
+upload.work.button = Upload work
+details.work = details
