Added review styling

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -13,7 +13,7 @@ annotation.work = Annotation
 send.date.work = Send date
 sort.ascending = Ascending
 sort.descending = Descending
-date.review = Publication date
+date.review = Publication date: 
 text.review = Text
 rate.review = Rate
 user.review = User
