Added footer _ text on main page

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -33,3 +33,6 @@ create.review.button = Create review
 upload.work.button = Upload work
 details.work = details
 created.review.message = You are already wrote review for this work
+footer.text = Contact developer on mail: klisandrij@gmail.com
+ukraine.text = Good evening, we are from Ukraine
+main.title.text = Science works publish site
