--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -36,3 +36,4 @@ created.review.message = You are already wrote review for this work
 footer.text = Contact developer on mail: klisandrij@gmail.com
 ukraine.text = Good evening, we are from Ukraine
 main.title.text = Science works publish site
+download.work = Download work here
