--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -37,3 +37,8 @@ footer.text = Contact developer on mail: klisandrij@gmail.com
 ukraine.text = Good evening, we are from Ukraine
 main.title.text = Science works publish site
 download.work = Download work here
+errorPageMessage.text = Oops... Something went wrong!
+errorPageWorkMessage.text = Our Engineers are on it
+goHome.button = Go Home
+confirm.password.text = Confirm password
+login.text  = Log in
